--- a/style.css
+++ b/style.css
@@ -38,11 +38,12 @@
     padding-left: 0%;
     padding-top: 0%;
     padding-right: 5%;
-    line-height: 20px;
+    line-height: 32px;
   }
 
 img {
   float: left;
+  margin-right: 8px;
   margin-bottom: 10px;
 }
 
